feat: Rebrand to CineForge and add audio transcription feature
🎨 Major Rebranding:
- Complete rebrand from TTV Pipeline to CineForge
- Updated logo integration and professional color scheme
- Cinematic blue/indigo theme with accent colors
- Enhanced typography using Inter font family

🎙️ Audio Transcription Feature:
- Added OpenAI Whisper integration for speech-to-text
- Support for multiple audio formats (MP3, MP4, WAV, M4A, FLAC)
- SRT format output with accurate timestamps
- Drag-and-drop file upload interface
- Copy to clipboard and download functionality

🚀 Frontend Enhancements:
- Professional pipeline process diagram integration
- Enhanced job management with custom titles
- Cost estimation with budget controls
- Job details modal with logs and configuration
- Smart polling with adaptive intervals
- Improved download functionality via backend proxy
- Modern card-based design with hover effects

⚡ API Improvements:
- New /transcription endpoints for audio processing
- Enhanced job models with title and detailed responses
- Streaming response for secure video downloads
- Increased prompt character limit to 8,000
- Rate limiting improvements (60 → 300 req/min)
- Added python-multipart dependency for file uploads

🔧 Infrastructure & Bug Fixes:
- Fixed GCS bucket configuration and permissions
- Enhanced Docker Compose setup with proper env vars
- Improved error handling and user feedback
- Added comprehensive job status tracking
- Fixed download CORS issues with backend proxy
- Better credential management and security

🎯 User Experience:
- Intuitive navigation with transcription tab
- Real-time job progress tracking
- Professional notifications and loading states
- Responsive design optimizations
- Comprehensive job details and debugging info

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -45,6 +45,10 @@ services:
       - ./generators:/app/generators:ro
       # Development configuration
       - ./api_config.dev.yaml:/app/api_config.yaml:ro
+    command: >
+      python -m rq.cli worker 
+      --url redis://redis:6379 
+      video_generation
     deploy:
       replicas: 1
     profiles:
