--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,5 @@ google-auth>=2.23.0
 # Additional utilities for API backends
 aiohttp>=3.8.0  # For async HTTP requests
 tenacity>=8.2.0  # For retry logic
+httpx>=0.24.0
+python-multipart>=0.0.5
