--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - GCS_BUCKET=${GCS_BUCKET:-ttv-api-artifacts}
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS:-/app/credentials/credentials.json}
       - GCS_CREDENTIALS_PATH=${GCS_CREDENTIALS_PATH:-/app/credentials/credentials.json}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     volumes:
